--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bin": {
     "mpcli": "./bin/index.js"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "node ./bin/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andresg9108/manyp-cli.git"
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/andresg9108/manyp-cli/issues"
   },
-  "homepage": "https://github.com/andresg9108/manyp-cli#readme"
+  "homepage": "https://github.com/andresg9108/manyp-cli#readme",
+  "dependencies": {
+    "install-here": "^2.0.2",
+    "shelljs": "^0.8.4"
+  }
 }
