--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "manyp-cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "This is the manyp-ag CLI.",
   "main": "./lib/index.js",
   "bin": {
     "mpcli": "./bin/index.js"
   },
   "scripts": {
-    "start": "node ./bin/index.js",
-    "prepare": "npm-run-all install-install-here",
-    "install-install-here": "npm i -g install-here"
+    "start": "node ./bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +20,9 @@
   },
   "homepage": "https://github.com/andresg9108/manyp-cli#readme",
   "dependencies": {
-    "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4"
+  },
+  "devDependencies": {
+    "install-here": "^2.0.2"
   }
 }
