--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "manyp-cli",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "This is the manyp-ag CLI.",
   "main": "./lib/index.js",
   "bin": {
-    "mpcli": "./bin/index.js"
+    "manyp-cli": "./bin/index.js"
   },
   "scripts": {
     "start": "node ./bin/index.js"
@@ -21,8 +21,5 @@
   "homepage": "https://github.com/andresg9108/manyp-cli#readme",
   "dependencies": {
     "shelljs": "^0.8.4"
-  },
-  "devDependencies": {
-    "install-here": "^2.0.2"
   }
 }
