--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manyp-cli",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "This is the manyp-ag CLI.",
   "main": "./lib/index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./bin/index.js",
-    "preinstall": "npm i -g install-here"
+    "preinstall": "npm i install-here processpy -g"
   },
   "repository": {
     "type": "git",
