--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manyp-cli",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "This is the manyp-ag CLI.",
   "main": "./lib/index.js",
   "bin": {
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/andresg9108/manyp-cli#readme",
   "dependencies": {
     "shelljs": "^0.8.5"
+  },
+  "config": {
+    "unsafe-perm": true
   }
 }
