--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manyp-cli",
-  "version": "1.3.3",
+  "version": "2.0.0",
   "description": "This is the manyp-ag CLI.",
   "main": "./lib/index.js",
   "bin": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/andresg9108/manyp-cli#readme",
   "dependencies": {
+    "commander": "^9.4.0",
     "shelljs": "^0.8.5"
   }
 }
